infra/services/website/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website
  namespace: development
spec:
  selector:
    app: website
  ports:
  - port: 80
    targetPort: 80
